Fixed portfolio element alignment

--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ a {
 	background-image: url(images/background.jpg);
 }
 .jobs {
-	display:inline;
+	display:inline-block;
 	text-align: center;
 	font-size: 50px;
 	padding-left: 20px;
